--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.97.0",
+    "@tosspayments/payment-widget-sdk": "^0.12.1",
     "canvas-confetti": "^1.9.4",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.3.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
